feat: 문제 조회시 카테고리 정보 처리 및 UI 연동

--- a/ui/src/assets/styles/index.scss
+++ b/ui/src/assets/styles/index.scss
@@ -54,6 +54,13 @@ input[type="number"]::-webkit-inner-spin-button {
   background-color: $bg-color;
 }
 
+.bright-1 {
+  background-color: darken($text-color, 5%);
+}
+
+.text-dark {
+  color: $darker-color;;
+}
 // .tab-active {
 //   background-color: $base-color !important;
 //   &::before,
